--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -38,7 +38,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 	background-color: var(--white);
 	padding: 3rem;
@@ -53,7 +53,7 @@ body {
 
 .hero .image {
 	display: flex;
-	width: 79rem;
+	width: 64vw;
 	height: 100%;
 	margin-right: 1.5rem;
 	border-radius: 2rem;
@@ -68,6 +68,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	padding: 1.5rem;
+	width: 30vw;
 }
 
 .login-page .login {
@@ -230,6 +231,7 @@ body {
 		border-radius: 2rem;
 		position: relative;
 		animation: animateModal 0.7s;
+		width: 40rem;
 	}
 
 	@keyframes animateModal {
