--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -46,7 +46,6 @@ body {
 
 .hero {
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	height: 100%;
 	position: relative;
@@ -54,7 +53,7 @@ body {
 
 .hero .image {
 	display: flex;
-	width: 68rem;
+	width: 64vw;
 	height: 100%;
 	margin-right: 1.5rem;
 	border-radius: 2rem;
@@ -69,6 +68,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	padding: 1.5rem;
+	width: 30vw;
 }
 
 .login-page .login {
