--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -116,7 +116,7 @@
 	cursor: pointer;
 }
 
-.keranjang .product-item .title .product-title a span:hover, 
+.keranjang .product-item .title .product-title a span:hover,
 .transaksi .detail .title .product-title a span:hover {
 	color: var(--black);
 }
@@ -184,28 +184,32 @@
 }
 
 /* Modal Pesanan */
-.modal-pesanan {
-	display: none;
-	position: fixed;
-	z-index: 999999;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.5);
+.pesanan-one {
+	display: grid;
+	margin-top: 6rem;
+	width: 74%;
+	margin-left: 22%;
+	margin-right: 4%;
+	margin-top: 1.5rem;
+}
+
+.pesanan-one h5 {
+	font-size: 1.5rem;
+	font-weight: 500;
 }
 
 .pesanan-container {
-	display: block;
+	display: grid;
 	position: relative;
-	background-color: var(--white);
-	margin: 4% auto;
+	background: transparent;
 	color: var(--black);
-	padding: 3rem;
-	width: 35rem;
+	border: 2px solid var(--gray);
+	width: 75%;
+	padding: 1.5rem;
 	border-radius: 1rem;
+	margin-top: 1rem;
 	animation: animateModal 0.5s;
+	gap: 1rem;
 }
 
 /* Modal Animation */
@@ -221,65 +225,9 @@
 	}
 }
 
-.pesanan-container .close-icon {
-	position: absolute;
-	right: 1rem;
-	top: 1rem;
-	color: var(--gray);
-	transform: scale(0.9);
-}
-
-.pesanan-container .close-icon:hover {
-	color: #aeaeae;
-}
-
-.pesanan-container h5 {
-	font-size: 1.5rem;
-	font-weight: 500;
-	margin-bottom: 0.8rem;
-}
-
-.pesanan-container .pesanan {
-	display: grid;
-	grid-template-columns: max-content auto max-content max-content;
-	gap: 1rem;
-}
-
-.pesanan-container p {
+th,
+td {
 	font-size: 1rem;
-	font-weight: 500;
-	margin-bottom: 3rem;
+	padding: 0.5rem;
 }
 
-.pesanan-container .btn {
-	display: flex;
-	justify-content: end;
-	text-align: center;
-}
-
-.pesanan-container .btn .cancel {
-	font-family: "Poppins", sans-serif;
-	padding: 0.5rem 1rem;
-	font-size: 1rem;
-	border-radius: 0.5rem;
-	background-color: var(--gray);
-	color: var(--white);
-}
-
-.pesanan-container .btn .cancel:hover {
-	background-color: #aeaeae;
-}
-
-.logout-container .btn .logout {
-	font-family: "Poppins", sans-serif;
-	padding: 0.5rem 1rem;
-	font-size: 1rem;
-	border-radius: 0.5rem;
-	background-color: var(--yellow);
-	color: var(--white);
-	margin-left: 1rem;
-}
-
-.logout-container .btn .logout:hover {
-	background-color: #e1b400;
-}
