--- a/assets/css/edit.css
+++ b/assets/css/edit.css
@@ -3,6 +3,7 @@
 	--color-danger: #cd0067;
 	--color-success: #88c23a;
 	--color-warning: #ffcc00;
+	--color-blue: #5ea5e7;
 	--color-white: #fff;
 	--color-info-dark: #7d8da1;
 	--color-info-light: #dce1eb;
