Menambahkan revisi, detail transaksi user

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -4,6 +4,7 @@
 	--yellow: #ffcc00;
 	--red: #cd0067;
 	--green: #88c23a;
+	--blue: #5ea5e7;
 	--white: #fff;
 	--white-gray: #f0f0f0;
 	--gray: #cecece;
