--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -2,6 +2,7 @@
 	--yellow: #ffcc00;
 	--red: #cd0067;
 	--green: #88c23a;
+	--blue: #5ea5e7;
 	--white: #fff;
 	--white-gray: #f0f0f0;
 	--gray: #cecece;
@@ -121,8 +122,7 @@
 	color: var(--black);
 }
 
-.keranjang .product-item .title .jumlah,
-.transaksi .detail .title .jumlah {
+.keranjang .product-item .title .jumlah {
 	margin-bottom: 1rem;
 }
 
@@ -151,8 +151,9 @@
 }
 
 .transaksi .detail .title .product-price {
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 1rem;
 	align-items: center;
 	width: 100%;
 }
